# src/main/java/io/aiontechnology/mentorsuccess/api/mapping/toentity/person/MentorModelToEntityUpdateMapper.java
@@ -17,7 +17,7 @@
 package io.aiontechnology.mentorsuccess.api.mapping.toentity.person;
 
 import io.aiontechnology.mentorsuccess.api.mapping.OneWayUpdateMapper;
-import io.aiontechnology.mentorsuccess.api.model.inbound.TeacherModel;
+import io.aiontechnology.mentorsuccess.api.model.inbound.InboundMentorModel;
 import io.aiontechnology.mentorsuccess.entity.Person;
 import io.aiontechnology.mentorsuccess.entity.SchoolPersonRole;
 import io.aiontechnology.mentorsuccess.util.PhoneService;
@@ -27,45 +27,37 @@ import org.springframework.stereotype.Component;
 import java.util.Objects;
 import java.util.Optional;
 
-import static io.aiontechnology.mentorsuccess.entity.RoleType.TEACHER;
+import static io.aiontechnology.mentorsuccess.entity.RoleType.MENTOR;
 
 /**
- * Mapper from {@link TeacherModel} to {@link SchoolPersonRole}.
+ * Mapper from {@link InboundMentorModel} to {@link SchoolPersonRole}.
  *
  * @author Whitney Hunter
  * @since 0.3.0
  */
 @Component
 @RequiredArgsConstructor
-public class TeacherModelToEntityUpdateMapper implements OneWayUpdateMapper<TeacherModel, SchoolPersonRole> {
+public class MentorModelToEntityUpdateMapper implements OneWayUpdateMapper<InboundMentorModel, SchoolPersonRole> {
 
     /** Phone number formatting service */
     private final PhoneService phoneService;
 
-    /**
-     * Map the given {@link TeacherModel} ot the given {@link SchoolPersonRole}.
-     *
-     * @param teacherModel The {@link TeacherModel} to map.
-     * @param role The {@link SchoolPersonRole} to map to.
-     * @return The resulting {@link SchoolPersonRole}.
-     */
     @Override
-    public Optional<SchoolPersonRole> map(TeacherModel teacherModel, SchoolPersonRole role) {
+    public Optional<SchoolPersonRole> map(InboundMentorModel mentorModel, SchoolPersonRole role) {
         Objects.requireNonNull(role);
-        return Optional.ofNullable(teacherModel)
-                .map(t -> {
+        return Optional.ofNullable(mentorModel)
+                .map(m -> {
                     Person person = role.getPerson() != null ? role.getPerson() : new Person();
-                    person.setFirstName(t.getFirstName());
-                    person.setLastName(t.getLastName());
-                    person.setEmail(t.getEmail());
-                    person.setWorkPhone(phoneService.normalize(t.getWorkPhone()));
-                    person.setCellPhone(phoneService.normalize(t.getCellPhone()));
+                    person.setFirstName(m.getFirstName());
+                    person.setLastName(m.getLastName());
+                    person.setEmail(m.getEmail());
+                    person.setWorkPhone(phoneService.normalize(m.getWorkPhone()));
+                    person.setCellPhone(phoneService.normalize(m.getCellPhone()));
 
                     role.setPerson(person);
+                    role.setAvailability(m.getAvailability());
                     role.setIsActive(true);
-                    role.setGrade1(t.getGrade1());
-                    role.setGrade2(t.getGrade2());
-                    role.setType(TEACHER);
+                    role.setType(MENTOR);
                     return role;
                 });
     }
